<resources>
    <string name="app_name">BT Simulator</string>
    <string name="connected_to">Connected to</string>
    <string name="waiting_for_commands">Waiting for commands</string>
    <string name="y_value">Y value:</string>
    <string name="send">Send</string>
    <string name="voltage">Voltage:</string>
    <string name="current">Current:</string>
    <string name="ohm">Ohm:</string>
    <string name="bluetooth_is_not_available">Bluetooth is not available</string>
    <string name="empty_y_field">Empty y field</string>
    <string name="empty_resistance_field">Empty resistance field</string>
    <string name="empty_current_field">Empty current field</string>
    <string name="empty_voltage_field">Empty voltage field</string>
    <string name="no_flag">No flag</string>
    <string name="send_random_data">Send random data</string>

    <array name="wave_types">
        <item>Square Wave</item>
        <item>Sine Wave</item>
        <item>Triangular Wave</item>
    </array>

    <array name="frequency_measure">
        <item>Hz</item>
        <item>kHz</item>
        <item>MHz</item>
    </array>
</resources>
