<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        app:cardElevation="2dp">

        <TextView
            android:id="@+id/meterField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field_res"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="35sp" />

    </android.support.v7.widget.CardView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voltage"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/voltageField"
                android:layout_width="150dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp" />

            <Button
                android:id="@+id/voltageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:enabled="false"
                android:background="@drawable/green_selector"
                android:text="@string/send" />
        </TableRow>

        <TableRow android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/currentField"
                android:layout_width="150dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp" />

            <Button
                android:id="@+id/currentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:enabled="false"
                android:background="@drawable/blue_selector"
                android:text="@string/send" />
        </TableRow>

        <TableRow android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ohm"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ohmField"
                android:layout_width="150dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp" />

            <Button
                android:id="@+id/ohmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:enabled="false"
                android:background="@drawable/red_selector"
                android:text="@string/send" />
        </TableRow>

    </TableLayout>

</LinearLayout>